--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -4,6 +4,7 @@
 <html lang="ru">
 
 <head>
+  <link rel="icon" href="{% static 'main/images/nasa.svg' %}" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
